Fixed Capsules Overflow and removed scroll

--- a/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/series-pages.styl
+++ b/wp-content/plugins/aliemu-plugins/inc/styles/collections/aliemu/series-pages.styl
@@ -52,9 +52,13 @@
             margin 10px
 
     .no-scroll
+        display flex
         flex-flow row wrap
         justify-content center
         padding 20px 30px
+        white-space normal
+        max-height 100%
+        height 100%
 
 @media (max-width: 480px)
     card(primary-color)
